sliders cleaned up, canvas dims passed from app component.html however only 800x500 seems to work.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
     Welcome to {{title}}!
   </h1>
 </div>
-<fractal-controller [minX]="-2.5" [maxX]="1" [minY]="-1" [maxY]="1"></fractal-controller>
+<fractal-controller [minX]="-2.5" [maxX]="1" [minY]="-1" [maxY]="1" [width]="800" [height]="500"></fractal-controller>
