--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
 <div style="text-align:center">
   <h1>
     Welcome to {{title}}!
   </h1>
 </div>
-<fractal-controller [minX]="-2.5" [maxX]="1" [minY]="-1" [maxY]="1" [width]="800" [height]="500"></fractal-controller>
+<fractal-canvas></fractal-canvas>
+<fractal-controller></fractal-controller>
