--- a/src/app/fractal-controller/fractal-controller.component.html
+++ b/src/app/fractal-controller/fractal-controller.component.html
@@ -2,27 +2,27 @@
 <ul>
 	<li class="range-label"> Minimum X or left screen edge: </li>
 	<li>
-		<input type="range" class="slider" [(ngModel)]="minX" min="-2.5" max={{maxX}} step="0.01">
-		<input type="text" [(ngModel)]="minX" class="range-input">
+		<input type="range" [(ngModel)]="minX" (change)="minXChange($event.target.value)" class="slider" min="-2.5" max={{maxX}} step="0.01">
+		<input type="text" [(ngModel)]="minX" (change)="minXChange($event.target.value)"  class="range-input">
 	</li>
 
 	<li class="range-label"> Maximum X or right screen edge: </li>
 	<li>
-		<input type="range" class="slider" [(ngModel)]="maxX" min={{minX}} max="1.0" step="0.01">
-		<input type="text" [(ngModel)]="maxX" class="range-input">
+		<input type="range" class="slider" [(ngModel)]="maxX" (change)="maxXChange($event.target.value)" min={{minX}} max="1.0" step="0.01">
+		<input type="text" [(ngModel)]="maxX" (change)="maxXChange($event.target.value)" class="range-input">
 	</li>
 
 
 	<li class="range-label"> Minimum Y or top screen edge (upside down y axis): </li>
 	<li>
-		<input type="range" class="slider" [(ngModel)]="minY" min="-1.0" max={{maxY}} step="0.01">
-		<input type="text" [(ngModel)]="minY" class="range-input">
+		<input type="range" class="slider" [(ngModel)]="minY" (change)="minYChange($event.target.value)" min="-1.0" max={{maxY}} step="0.01">
+		<input type="text" [(ngModel)]="minY" (change)="minYChange($event.target.value)" class="range-input">
 	</li>
 
 
 	<li class="range-label"> Maximum Y or bottom screen edge: </li>
 	<li>
-		<input type="range" class="slider" [(ngModel)]="maxY"  min={{minY}} max="1.0" step="0.01">
+		<input type="range" class="slider" [(ngModel)]="maxY" (change)="maxYChange($event.target.value)" min={{minY}} max="1.0" step="0.01">
 		<input type="text" [(ngModel)]="maxY" (change)="maxYChange($event.target.value)" class="range-input">
 	</li>
 
@@ -30,6 +30,6 @@
 	<li class="range-label"> Escape Value: </li>
 	<li>
 		<input type="range" class="slider" #escapeVal [(ngModel)]="iterations" (change)="iterationsChange($event.target.value)" min="10" max="1000">
-		<p>{{iterations}}</p>
+		<label>{{iterations}}</label>
 	</li>
 </ul>
